force-app/main/default/objects/ucinn_ascendv2__Degree_Information__c/ucinn_ascendv2__Degree_Information__c.object-meta.xml
<CustomObject>
    <description>Degree information of a constituent.</description>
    <label>Degree Information</label>
    <nameField>
        <label>Degree Information Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Degree Information</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>