force-app/main/default/objects/ucinn_ascendv2__Degree_Information__c/fields/Confirmed_by_Individual__c.field-meta.xml
<CustomField>
    <fullName>Confirmed_by_Individual__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>If checked true this degree has been provided or confirmed by the constituent.</inlineHelpText>
    <label>Confirmed by Individual</label>
    <type>Checkbox</type>
</CustomField>