force-app/main/default/objects/ucinn_ascendv2__Degree_Information__c/fields/DEG_SEQ__c.field-meta.xml
<CustomField>
    <fullName>DEG_SEQ__c</fullName>
    <description>from summit.degree</description>
    <label>Degree Sequence</label>
    <length>1</length>
    <type>Text</type>
</CustomField>