force-app/main/default/objects/ucinn_ascendv2__Degree_Information__c/fields/Degree_Type_Degree_Code__c.field-meta.xml
<CustomField>
    <fullName>Degree_Type_Degree_Code__c</fullName>
    <formula>ucinn_ascendv2__Degree_Code__r.ucinn_ascendv2__Degree_Code__c</formula>
    <label>Degree Type Degree Code</label>
    <type>Text</type>
</CustomField>