force-app/main/default/objects/ucinn_ascendv2__Degree_Information__c/fields/Degree_Type_Level__c.field-meta.xml
<CustomField>
    <fullName>Degree_Type_Level__c</fullName>
    <formula>TEXT(ucinn_ascendv2__Degree_Code__r.ucinn_ascendv2__Degree_Level__c)</formula>
    <label>Degree Type Level</label>
    <type>Text</type>
</CustomField>