force-app/main/default/objects/ucinn_ascendv2__Degree_Information__c/fields/Department__c.field-meta.xml
<CustomField>
    <fullName>Department__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Department</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>ucinn_ascendv2__Academic_Organization__c.Fund_Source__c</field>
            <operation>equals</operation>
            <value>Degree Department</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>ucinn_ascendv2__Academic_Organization__c</referenceTo>
    <relationshipLabel>Degree Information (Department)</relationshipLabel>
    <relationshipName>Degree_Information1</relationshipName>
    <type>Lookup</type>
</CustomField>