force-app/main/default/objects/ucinn_ascendv2__Degree_Information__c/fields/Donor_ID__c.field-meta.xml
<CustomField>
    <fullName>Donor_ID__c</fullName>
    <description>Constituent donor ID</description>
    <formula>ucinn_ascendv2__Contact__r.ucinn_ascendv2__Donor_ID__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Donor ID</label>
    <type>Text</type>
</CustomField>