force-app/main/default/objects/ucinn_ascendv2__Degree_Information__c/fields/Institution_External_Id__c.field-meta.xml
<CustomField>
    <fullName>Institution_External_Id__c</fullName>
    <formula>Institution__r.External_System_ID__c</formula>
    <label>Institution External Id</label>
    <type>Text</type>
</CustomField>