force-app/main/default/objects/ucinn_ascendv2__Degree_Information__c/fields/Institution_Type__c.field-meta.xml
<CustomField>
    <fullName>Institution_Type__c</fullName>
    <formula>IF ( INCLUDES ( Institution__r.Institution_Type__c , &quot;Historically Black Colleges and Universities (HBCU)&quot; ), &quot;Historically Black Colleges and Universities (HBCU)&quot;,null ) &amp; 
IF ( INCLUDES ( Institution__r.Institution_Type__c , &quot;Ivy League&quot; ), &quot;Ivy League &quot;,null )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Institution Type</label>
    <type>Text</type>
</CustomField>