force-app/main/default/objects/ucinn_ascendv2__Degree_Information__c/fields/Is_Current_Student__c.field-meta.xml
<CustomField>
    <fullName>Is_Current_Student__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Current Student</label>
    <type>Checkbox</type>
</CustomField>