force-app/main/default/objects/ucinn_ascendv2__Degree_Information__c/fields/Term_Picklist__c.field-meta.xml
<CustomField>
    <fullName>Term_Picklist__c</fullName>
    <label>Term</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Fall semester</fullName>
            </value>
            <value>
                <fullName>Winter semester</fullName>
            </value>
            <value>
                <fullName>Spring semester</fullName>
            </value>
            <value>
                <fullName>First summer session</fullName>
            </value>
            <value>
                <fullName>Second summer session</fullName>
            </value>
            <value>
                <fullName>NULL</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>