force-app/main/default/objects/ucinn_ascendv2__Degree_Information__c/fields/Trigger_Record__c.field-meta.xml
<CustomField>
    <fullName>Trigger_Record__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Used to trigger a record to get degree information updated on constituent</description>
    <label>Trigger Record</label>
    <type>Checkbox</type>
</CustomField>