force-app/main/default/objects/ucinn_ascendv2__Degree_Information__c/fields/Type__c.field-meta.xml
<CustomField>
    <fullName>Type__c</fullName>
    <description>C Miscellaneous degrees
D Doctor, Veterinary Medicine
F Class preference (PRF)
H Honorary Degree
M Masters
O Degrees from other institutions
P Ph.D. (doctorate)
R Professional degree
U Undergraduate</description>
    <label>Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Miscellaneous degrees</fullName>
            </value>
            <value>
                <fullName>Doctor, Veterinary Medicine</fullName>
            </value>
            <value>
                <fullName>Class preference (PRF)</fullName>
            </value>
            <value>
                <fullName>Honorary Degree</fullName>
            </value>
            <value>
                <fullName>Masters</fullName>
            </value>
            <value>
                <fullName>Degrees from other institutions</fullName>
            </value>
            <value>
                <fullName>Ph.D. (doctorate)</fullName>
            </value>
            <value>
                <fullName>Professional degree</fullName>
            </value>
            <value>
                <fullName>Undergraduate</fullName>
            </value>
            <value>
                <fullName>Attending/Attended</fullName>
            </value>
            <value>
                <fullName>Certificate</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>