force-app/main/default/objects/ucinn_ascendv2__Degree_Information__c/fields/ucinn_ascendv2__Affinity_Class_Year__c.field-meta.xml
<CustomField>
    <fullName>ucinn_ascendv2__Affinity_Class_Year__c</fullName>
    <label>Affinity Class Year</label>
    <length>4</length>
    <type>Text</type>
</CustomField>