force-app/main/default/objects/ucinn_ascendv2__Degree_Information__c/fields/ucinn_ascendv2__Class_Level__c.field-meta.xml
<CustomField>
    <fullName>ucinn_ascendv2__Class_Level__c</fullName>
    <label>Class Level</label>
    <length>200</length>
    <type>Text</type>
</CustomField>