force-app/main/default/objects/ucinn_ascendv2__Degree_Information__c/fields/ucinn_ascendv2__Concentration_Specialty__c.field-meta.xml
<CustomField>
    <fullName>ucinn_ascendv2__Concentration_Specialty__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Looks up to Specialty Codes</description>
    <label>Concentration / Specialty</label>
    <referenceTo>ucinn_ascendv2__Specialty__c</referenceTo>
    <relationshipLabel>Degree Information</relationshipLabel>
    <relationshipName>Degree_Info_Concentration_Specialty</relationshipName>
    <type>Lookup</type>
</CustomField>