force-app/main/default/objects/ucinn_ascendv2__Degree_Information__c/fields/ucinn_ascendv2__Contact__c.field-meta.xml
<CustomField>
    <fullName>ucinn_ascendv2__Contact__c</fullName>
    <label>Constituent</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Degree Information</relationshipLabel>
    <relationshipName>Degree_Information_Contact</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <reparentableMasterDetail>true</reparentableMasterDetail>
    <type>MasterDetail</type>
</CustomField>