force-app/main/default/objects/ucinn_ascendv2__Degree_Information__c/fields/ucinn_ascendv2__Degree__c.field-meta.xml
<CustomField>
    <fullName>ucinn_ascendv2__Degree__c</fullName>
    <label>Degree</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>BA</fullName>
            </value>
            <value>
                <fullName>BS</fullName>
            </value>
            <value>
                <fullName>MA</fullName>
            </value>
            <value>
                <fullName>MS</fullName>
            </value>
            <value>
                <fullName>MBA</fullName>
            </value>
            <value>
                <fullName>MFA</fullName>
            </value>
            <value>
                <fullName>MD</fullName>
            </value>
            <value>
                <fullName>JD</fullName>
            </value>
            <value>
                <fullName>PhD</fullName>
            </value>
            <value>
                <fullName>Undergraduate</fullName>
            </value>
            <value>
                <fullName>Graduate</fullName>
            </value>
            <value>
                <fullName>LLM</fullName>
            </value>
            <value>
                <fullName>LLB</fullName>
            </value>
            <value>
                <fullName>Asc</fullName>
            </value>
            <value>
                <fullName>Cert</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>