force-app/main/default/objects/ucinn_ascendv2__Degree_Information__c/fields/ucinn_ascendv2__Degree_Code__c.field-meta.xml
<CustomField>
    <fullName>ucinn_ascendv2__Degree_Code__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Degree Code</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>ucinn_ascendv2__Degree_Code__c.ucinn_ascendv2__Is_Active__c</field>
            <operation>equals</operation>
            <value>True</value>
        </filterItems>
        <isOptional>true</isOptional>
    </lookupFilter>
    <referenceTo>ucinn_ascendv2__Degree_Code__c</referenceTo>
    <relationshipLabel>Degree Information</relationshipLabel>
    <relationshipName>Degree_Information_Degree_Code</relationshipName>
    <type>Lookup</type>
</CustomField>