force-app/main/default/objects/ucinn_ascendv2__Degree_Information__c/fields/ucinn_ascendv2__Degree_Date__c.field-meta.xml
<CustomField>
    <fullName>ucinn_ascendv2__Degree_Date__c</fullName>
    <label>Degree Date</label>
    <type>Date</type>
</CustomField>