force-app/main/default/objects/ucinn_ascendv2__Degree_Information__c/fields/ucinn_ascendv2__Degree_Institution__c.field-meta.xml
<CustomField>
    <fullName>ucinn_ascendv2__Degree_Institution__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Degree Institution</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Degree Information</relationshipLabel>
    <relationshipName>Degree_Information_Degree_Institution</relationshipName>
    <type>Lookup</type>
</CustomField>