force-app/main/default/objects/ucinn_ascendv2__Degree_Information__c/fields/ucinn_ascendv2__Degree_Level_Code_Formula__c.field-meta.xml
<CustomField>
    <fullName>ucinn_ascendv2__Degree_Level_Code_Formula__c</fullName>
    <formula>If( (ucinn_ascendv2__Post_Code__c != null &amp;&amp; ucinn_ascendv2__Post_Code__c !=&apos;&apos;), ucinn_ascendv2__Post_Code__r.ucinn_ascendv2__Degree_Level_Code__c,
if( ucinn_ascendv2__Minor_Code__c != null &amp;&amp; ucinn_ascendv2__Minor_Code__c != &apos;&apos;,  ucinn_ascendv2__Minor_Post_Code__r.ucinn_ascendv2__Degree_Level_Code__c, &apos;&apos;))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Degree Level Code</label>
    <type>Text</type>
</CustomField>