force-app/main/default/objects/ucinn_ascendv2__Degree_Information__c/fields/ucinn_ascendv2__Degree_Level_Formula__c.field-meta.xml
<CustomField>
    <fullName>ucinn_ascendv2__Degree_Level_Formula__c</fullName>
    <formula>IF(ucinn_ascendv2__Post_Code__c=null,&quot;&quot;,(IF(ucinn_ascendv2__Post_Code__r.ucinn_ascendv2__Degree_Level_Code__c=null,&quot;&quot;,IF(BEGINS(ucinn_ascendv2__Post_Code__r.ucinn_ascendv2__Degree_Level_Code__c,&quot;U&quot;),&quot;Undergraduate&quot;,&quot;Graduate&quot;))))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Degree Level</label>
    <type>Text</type>
</CustomField>