force-app/main/default/objects/ucinn_ascendv2__Degree_Information__c/fields/ucinn_ascendv2__Degree_Name_Auto_Number__c.field-meta.xml
<CustomField>
    <fullName>ucinn_ascendv2__Degree_Name_Auto_Number__c</fullName>
    <displayFormat>DEG-{0000000}</displayFormat>
    <label>Degree Name Auto Number</label>
    <type>AutoNumber</type>
</CustomField>