force-app/main/default/objects/ucinn_ascendv2__Degree_Information__c/fields/ucinn_ascendv2__Degree_Type__c.field-meta.xml
<CustomField>
    <fullName>ucinn_ascendv2__Degree_Type__c</fullName>
    <formula>IF((ucinn_ascendv2__Affinity_Class_Year__c != ucinn_ascendv2__Conferred_Degree_Year__c &amp;&amp; NOT(ISBLANK(ucinn_ascendv2__Affinity_Class_Year__c))) , &apos;Affinity Class Year&apos;, IF (NOT(ISBLANK(ucinn_ascendv2__Conferred_Degree_Year__c)), &apos;Conferred Degree Year&apos;, &apos;&apos;))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Degree Type</label>
    <type>Text</type>
</CustomField>