force-app/main/default/objects/ucinn_ascendv2__Degree_Information__c/fields/ucinn_ascendv2__Degree_Type_Text__c.field-meta.xml
<CustomField>
    <fullName>ucinn_ascendv2__Degree_Type_Text__c</fullName>
    <description>This is the Degree Type that is derived based on the configuration in Bio Demo custom metadata.</description>
    <inlineHelpText>This is the Degree Type that is derived based on the configuration in Bio Demo custom metadata.</inlineHelpText>
    <label>Degree Type Text</label>
    <length>255</length>
    <type>Text</type>
</CustomField>