force-app/main/default/objects/ucinn_ascendv2__Degree_Information__c/fields/ucinn_ascendv2__Degree_Year_Number_Formula__c.field-meta.xml
<CustomField>
    <fullName>ucinn_ascendv2__Degree_Year_Number_Formula__c</fullName>
    <formula>VALUE( ucinn_ascendv2__Conferred_Degree_Year__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Degree Year Number</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>