force-app/main/default/objects/ucinn_ascendv2__Degree_Information__c/fields/ucinn_ascendv2__Interim__c.field-meta.xml
<CustomField>
    <fullName>ucinn_ascendv2__Interim__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Interim</label>
    <referenceTo>ucinn_ascendv2__Interim__c</referenceTo>
    <relationshipLabel>Degree Information</relationshipLabel>
    <relationshipName>Degree_Information_Interim</relationshipName>
    <type>Lookup</type>
</CustomField>