force-app/main/default/objects/ucinn_ascendv2__Degree_Information__c/fields/ucinn_ascendv2__Is_School_Formula__c.field-meta.xml
<CustomField>
    <fullName>ucinn_ascendv2__Is_School_Formula__c</fullName>
    <formula>IF( RecordType.DeveloperName = &apos;School_Degree_Information&apos;, true, false)</formula>
    <label>Is School</label>
    <type>Checkbox</type>
</CustomField>