force-app/main/default/objects/ucinn_ascendv2__Degree_Information__c/fields/ucinn_ascendv2__Major_Degree_Formula__c.field-meta.xml
<CustomField>
    <fullName>ucinn_ascendv2__Major_Degree_Formula__c</fullName>
    <formula>ucinn_ascendv2__Post_Code__r.ucinn_ascendv2__Degree_Description__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Major Degree</label>
    <type>Text</type>
</CustomField>