force-app/main/default/objects/ucinn_ascendv2__Degree_Information__c/fields/ucinn_ascendv2__Minor_Code__c.field-meta.xml
<CustomField>
    <fullName>ucinn_ascendv2__Minor_Code__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Minor Code</label>
    <referenceTo>ucinn_ascendv2__Minor_Code__c</referenceTo>
    <relationshipLabel>Degree Information</relationshipLabel>
    <relationshipName>Degree_Information_Minor_Code</relationshipName>
    <type>Lookup</type>
</CustomField>