force-app/main/default/objects/ucinn_ascendv2__Degree_Information__c/fields/ucinn_ascendv2__Minor_Degree_Formula__c.field-meta.xml
<CustomField>
    <fullName>ucinn_ascendv2__Minor_Degree_Formula__c</fullName>
    <formula>ucinn_ascendv2__Minor_Code__r.ucinn_ascendv2__Description__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Minor Degree</label>
    <type>Text</type>
</CustomField>