force-app/main/default/objects/ucinn_ascendv2__Degree_Information__c/fields/ucinn_ascendv2__Non_School_Major__c.field-meta.xml
<CustomField>
    <fullName>ucinn_ascendv2__Non_School_Major__c</fullName>
    <label>Non-School Major</label>
    <length>255</length>
    <type>Text</type>
</CustomField>