force-app/main/default/objects/ucinn_ascendv2__Degree_Information__c/fields/ucinn_ascendv2__School_2_Formula__c.field-meta.xml
<CustomField>
    <fullName>ucinn_ascendv2__School_2_Formula__c</fullName>
    <formula>If( (ucinn_ascendv2__Post_Code__c != null &amp;&amp; ucinn_ascendv2__Post_Code__c !=&apos;&apos;), ucinn_ascendv2__Post_Code__r.ucinn_ascendv2__School_2_Name_Formula__c, &apos;&apos;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>School 2</label>
    <type>Text</type>
</CustomField>