force-app/main/default/objects/ucinn_ascendv2__Degree_Information__c/fields/ucinn_ascendv2__Second_Major_Post_Code__c.field-meta.xml
<CustomField>
    <fullName>ucinn_ascendv2__Second_Major_Post_Code__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Second Major Post Code</label>
    <referenceTo>ucinn_ascendv2__Post_Code__c</referenceTo>
    <relationshipLabel>Degree Information (Second Major Post Code)</relationshipLabel>
    <relationshipName>Degree_Info_Second_Major_Post_Code</relationshipName>
    <type>Lookup</type>
</CustomField>