force-app/main/default/objects/ucinn_ascendv2__Degree_Information__c/fields/ucinn_ascendv2__Term__c.field-meta.xml
<CustomField>
    <fullName>ucinn_ascendv2__Term__c</fullName>
    <label>Term</label>
    <length>5</length>
    <type>Text</type>
</CustomField>