force-app/main/default/objects/ucinn_ascendv2__Degree_Information__c/fields/ucinn_ascendv2__University_Honors__c.field-meta.xml
<CustomField>
    <fullName>ucinn_ascendv2__University_Honors__c</fullName>
    <label>University Honors</label>
    <length>255</length>
    <type>Text</type>
</CustomField>