force-app/main/default/objects/ucinn_ascendv2__Degree_Information__c/fields/ucinn_portal_Degree_Institution_Text__c.field-meta.xml
<CustomField>
    <fullName>ucinn_portal_Degree_Institution_Text__c</fullName>
    <label>Degree Institution Text</label>
    <length>255</length>
    <type>Text</type>
</CustomField>