force-app/main/default/objects/ucinn_ascendv2__Degree_Information__c/fields/ucinn_portal_Is_Show_Degree__c.field-meta.xml
<CustomField>
    <fullName>ucinn_portal_Is_Show_Degree__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Show Degree</label>
    <type>Checkbox</type>
</CustomField>