force-app/main/default/objects/ucinn_ascendv2__Degree_Information__c/fields/ucinn_portal_Master_Degree_Information__c.field-meta.xml
<CustomField>
    <fullName>ucinn_portal_Master_Degree_Information__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Master Degree Information</label>
    <referenceTo>ucinn_ascendv2__Degree_Information__c</referenceTo>
    <relationshipLabel>Degree Information</relationshipLabel>
    <relationshipName>ucinn_portal_Degree_Information</relationshipName>
    <type>Lookup</type>
</CustomField>