force-app/main/default/objects/ucinn_ascendv2__Degree_Information__c/fields/ucinn_portal_Original_Record__c.field-meta.xml
<CustomField>
    <fullName>ucinn_portal_Original_Record__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Original Record</label>
    <referenceTo>ucinn_ascendv2__Degree_Information__c</referenceTo>
    <relationshipLabel>Degree Information (Original Record)</relationshipLabel>
    <relationshipName>ucinn_portal_Degree_Information1</relationshipName>
    <type>Lookup</type>
</CustomField>