force-app/main/default/objects/ucinn_ascendv2__Degree_Information__c/recordTypes/Student_Major.recordType-meta.xml
<RecordType>
    <fullName>Student_Major</fullName>
    <active>true</active>
    <description>This Record Type should be used to track current student major details</description>
    <label>Student Major</label>
</RecordType>