force-app/main/default/objects/ucinn_ascendv2__Degree_Information__c/recordTypes/ucinn_ascendv2__School_Degree_Information.recordType-meta.xml
<RecordType>
    <fullName>ucinn_ascendv2__School_Degree_Information</fullName>
    <active>true</active>
    <description>Information about a degree which is from this university.</description>
    <label>School Degree Information</label>
</RecordType>