force-app/main/default/objects/ucinn_ascendv2__Degree_Information__c/listViews/LAS_Majors_List.listView-meta.xml
<ListView>
    <fullName>LAS_Majors_List</fullName>
    <columns>Institution__c</columns>
    <columns>Department__c</columns>
    <columns>College__c</columns>
    <columns>ucinn_ascendv2__Post_Code__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Institution__c</field>
        <operation>contains</operation>
        <value>Iowa State Univ</value>
    </filters>
    <filters>
        <field>ucinn_ascendv2__Post_Code__c</field>
        <operation>contains</operation>
        <value>Chemistry</value>
    </filters>
    <filters>
        <field>Department__c</field>
        <operation>contains</operation>
        <value>Chemistry</value>
    </filters>
    <filters>
        <field>College__c</field>
        <operation>contains</operation>
        <value>Liberal</value>
    </filters>
    <label>LAS Majors List</label>
</ListView>