force-app/main/default/objects/ucinn_ascendv2__Degree_Information__c/listViews/ucinn_ascendv2__All.listView-meta.xml
<ListView>
    <fullName>ucinn_ascendv2__All</fullName>
    <columns>NAME</columns>
    <columns>RECORDTYPE</columns>
    <columns>ucinn_ascendv2__Contact__c</columns>
    <columns>ucinn_ascendv2__Post_Code__c</columns>
    <columns>ucinn_ascendv2__Conferred_Degree_Year__c</columns>
    <columns>LAST_UPDATE</columns>
    <columns>UPDATEDBY_USER</columns>
    <columns>CREATEDBY_USER</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>ucinn_ascendv2__Conferred_Degree_Year__c</field>
        <operation>equals</operation>
        <value>2021</value>
    </filters>
    <filters>
        <field>Term_Picklist__c</field>
        <operation>equals</operation>
        <value>Second summer session</value>
    </filters>
    <label>All</label>
</ListView>