force-app/main/default/objects/ucinn_ascendv2__Degree_Information__c/listViews/ucinn_ascendv2__All_Non_School_Degrees.listView-meta.xml
<ListView>
    <fullName>ucinn_ascendv2__All_Non_School_Degrees</fullName>
    <columns>ucinn_ascendv2__External_System_ID__c</columns>
    <columns>RECORDTYPE</columns>
    <columns>ucinn_ascendv2__Contact__c</columns>
    <columns>ucinn_ascendv2__Degree__c</columns>
    <columns>ucinn_ascendv2__Post_Code__c</columns>
    <columns>CREATEDBY_USER</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>RECORDTYPE</field>
        <operation>equals</operation>
        <value>ucinn_ascendv2__Degree_Information__c.ucinn_ascendv2__Non_School_Degree_Information</value>
    </filters>
    <label>All Non-School Degrees</label>
</ListView>